# CRAvatar

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  files.cmake
CRAvatar/: CMakeLists.txt  files.cmake
CRAvatar/config-templates/ar-vive/: SystemConfiguration.xml
CRAvatar/config-templates/ar-vive/panda3d/render_pipeline/: plugins.yaml
CRAvatar/config-templates/default/: SystemConfiguration.xml
CRAvatar/config-templates/vr/: SystemConfiguration.xml
CRAvatar/config-templates/vr/panda3d/render_pipeline/: plugins.yaml
CRAvatar/src/: ar_system.cpp  ar_system.hpp  main.cpp  main.hpp  openvr_manager.cpp  openvr_manager.hpp
CRAvatar/src/main_gui/: foot_mouse_gui.cpp  main_gui.cpp  main_gui.hpp
CRAvatar/src/objects/: floor.cpp  floor.hpp
config/: SystemConfiguration.xml
config-templates/ar-vive/: DynamicModuleConfiguration.xml  SystemConfiguration.xml
config-templates/ar-vive/panda3d/render_pipeline/: plugins.yaml
config-templates/default/panda3d/render_pipeline/: plugins.yaml
config-templates/vr/panda3d/render_pipeline/: plugins.yaml
config/panda3d/render_pipeline/: plugins.yaml
simple_ik/: CMakeLists.txt
simple_ik/include/simple_ik/: module.h
simple_ik/src/: module.cpp
src/: main.cpp  main.hpp  main_gui.cpp  openvr_manager.cpp  openvr_manager.hpp
src/objects/: floor.cpp  floor.hpp
